<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg1"
    android:id="@+id/v"
    tools:context=".fragments.All_Patients_Fragment">
    <RelativeLayout
        android:id="@+id/top"
        android:visibility="visible"
        android:background="@color/toolbarcolor"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        >
        <ImageButton
            android:id="@+id/bck"
            android:layout_width="50dp"
            android:layout_height="52dp"
            android:visibility="gone"
            android:layout_marginLeft="10dp"
            android:padding="13dp"
            android:scaleType="fitCenter"
            android:background="@color/toolbarcolor"
            android:src="@drawable/ic_arrow_back_24_px"></ImageButton>
        <com.monitor.widget.Lato_Regular_Font
            android:layout_centerInParent="true"
            android:textColor="@color/textcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Patients"
            android:textSize="18dp"
            ></com.monitor.widget.Lato_Regular_Font>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical">
        <com.monitor.widget.Lato_Regular_Font
            android:textColor="@color/textcolor"
            android:text="@string/AllPatients"
            android:layout_weight=".5"
            android:textSize="18dp"
            android:gravity="center_vertical|left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.monitor.widget.Lato_Regular_Font>
        <LinearLayout
            android:orientation="horizontal" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:weightSum="5"
            android:background="@color/bg1">
            <com.monitor.widget.Lato_Regular_Font
                android:layout_weight=".9"
                android:textColor="@color/textcolor"
                android:text="@string/patientname"
                android:textSize="@dimen/textsize"
                android:gravity="center_vertical|left"
                android:id="@+id/p_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.monitor.widget.Lato_Regular_Font>
            <com.monitor.widget.Lato_Regular_Font
                android:layout_weight="1.1"
                android:textColor="@color/textcolor"
                android:text="@string/Age"
                android:id="@+id/age"
                android:textSize="@dimen/textsize"
                android:gravity="center_vertical|center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.monitor.widget.Lato_Regular_Font>
            <com.monitor.widget.Lato_Regular_Font
                android:layout_weight=".95"
                android:textColor="@color/textcolor"
                android:text="@string/Hospital"
                android:id="@+id/hospital"
                android:textSize="@dimen/textsize"
                android:gravity="center_vertical|center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.monitor.widget.Lato_Regular_Font>
            <com.monitor.widget.Lato_Regular_Font
                android:layout_weight="1"
                android:textColor="@color/textcolor"
                android:text="@string/Room"
                android:id="@+id/roomNo"
                android:textSize="@dimen/textsize"
                android:gravity="center_vertical|center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.monitor.widget.Lato_Regular_Font>
            <com.monitor.widget.Lato_Regular_Font
                android:layout_weight="1"
                android:textColor="@color/textcolor"
                android:text="@string/BedN"
                android:textSize="@dimen/textsize"
                android:gravity="center_vertical|center"
                android:id="@+id/bedNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.monitor.widget.Lato_Regular_Font>
            <com.monitor.widget.Lato_Regular_Font
                android:layout_weight="1"
                android:textColor="@color/textcolor"
                android:text="@string/Action"
                android:textSize="@dimen/textsize"
                android:visibility="gone"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.monitor.widget.Lato_Regular_Font>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@color/textcolor">
        </View>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reclycle">
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>