<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
tools:context=".activities.SplashActivity"
android:id="@+id/r"
android:orientation="vertical">
<ImageView
    android:layout_width="171.7dp"
    android:layout_height="150dp"
    android:id="@+id/logo1"
    android:layout_gravity="center_horizontal"
    android:visibility="visible"
    android:src="@drawable/splash_logo"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="81.5dp"/>
    <com.monitor.widget.GothamBookFontForLable
        android:id="@+id/t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="81.5dp"
        android:visibility="invisible"

        android:layout_centerHorizontal="true"
        android:text="@string/Smrticu"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="26sp" />

<com.monitor.widget.GothamBookFontForLable
    android:id="@+id/t1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="250dp"
    android:layout_below="@id/logo1"
    android:layout_centerHorizontal="true"
    android:text="@string/welcome"
    android:textColor="@color/colorAccent"
    android:textSize="20sp" />
<com.monitor.widget.GothamBookFontForLable
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:layout_below="@id/t1"
    android:layout_centerHorizontal="true"
    android:text="@string/version"
    android:textColor="@color/colorAccent"
    android:textSize="14sp" />
<ImageView
    android:id="@+id/logo2"
    android:layout_width="171.7dp"
    android:layout_height="150dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:visibility="gone"
    android:layout_marginBottom="150dp"
    android:src="@drawable/splash_logo" />
</LinearLayout>