<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/top_view"
    android:layout_height="match_parent"
    android:background="@color/bg1"
    tools:context=".activities.ShowPatientsActivity">
    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/toolbarcolor"
        >
        <ImageButton
            android:id="@+id/bck"
            android:layout_width="50dp"
            android:layout_height="52dp"
            android:layout_marginLeft="5dp"
            android:padding="13dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:background="@color/toolbarcolor"
            android:src="@drawable/ic_arrow_back_24_px"></ImageButton>
        <com.monitor.widget.Lato_Regular_Font
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:textColor="@color/textcolor"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/PD"
            >
        </com.monitor.widget.Lato_Regular_Font>
    </RelativeLayout>
<com.monitor.widget.Lato_Regular_Font
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/h"
    android:textSize="20dp"
    android:layout_marginTop="5dp"
    android:textColor="@color/textcolor"
    android:layout_marginLeft="15dp">
</com.monitor.widget.Lato_Regular_Font>


    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:weightSum="5"
        android:layout_below="@+id/h"
        android:background="@color/bg1">
        <com.monitor.widget.Lato_Regular_Font
            android:layout_weight=".9"
            android:textColor="@color/textcolor"
            android:text="P_Name"
            android:textSize="@dimen/textsize"
            android:paddingLeft="15dp"
            android:gravity="center_vertical|left"
            android:id="@+id/p_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.monitor.widget.Lato_Regular_Font>
        <com.monitor.widget.Lato_Regular_Font
            android:layout_weight="1.1"
            android:textColor="@color/textcolor"
            android:text="@string/Age"
            android:id="@+id/age"
            android:textSize="@dimen/textsize"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.monitor.widget.Lato_Regular_Font>
        <com.monitor.widget.Lato_Regular_Font
            android:layout_weight=".95"
            android:textColor="@color/textcolor"
            android:text="@string/bloodgp"
            android:id="@+id/hospital"
            android:textSize="@dimen/textsize"
            android:gravity="center_vertical|left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.monitor.widget.Lato_Regular_Font>
        <com.monitor.widget.Lato_Regular_Font
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:text="@string/Gender"
            android:id="@+id/roomNo"
            android:textSize="@dimen/textsize"
            android:gravity="center_vertical|left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.monitor.widget.Lato_Regular_Font>
        <com.monitor.widget.Lato_Regular_Font
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:text="@string/BedN"
            android:textSize="@dimen/textsize"
            android:gravity="center_vertical|center"
            android:id="@+id/bedNo"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.monitor.widget.Lato_Regular_Font>
        <com.monitor.widget.Lato_Regular_Font
            android:layout_weight="1"
            android:textColor="@color/textcolor"
            android:text="@string/Action"
            android:textSize="@dimen/textsize"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.monitor.widget.Lato_Regular_Font>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/textcolor">
    </View>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reclycle"
        android:layout_below="@+id/h">
    </androidx.recyclerview.widget.RecyclerView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb"
        app:theme="@style/AAA_ProgressBar"
        android:layout_gravity="center_horizontal">
    </ProgressBar>




</LinearLayout>