<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/v"
    android:background="@color/bg1"
    tools:context=".fragments.Hospital_Fragment">

    <RelativeLayout
        android:id="@+id/top"
        android:visibility="visible"
        android:background="@color/toolbarcolor"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        >
        <ImageButton
            android:id="@+id/bck"
            android:layout_width="50dp"
            android:visibility="gone"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:padding="13dp"
            android:scaleType="fitCenter"
            android:background="@color/toolbarcolor"
            android:src="@drawable/ic_arrow_back_24_px"></ImageButton>
        <com.monitor.widget.Lato_Regular_Font
            android:layout_centerInParent="true"
            android:textColor="@color/textcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AllHospitall"
            android:textSize="18dp"
            ></com.monitor.widget.Lato_Regular_Font>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <com.monitor.widget.Lato_Regular_Font
            android:textColor="@color/textcolor"
            android:text="@string/AllHospitall"
            android:layout_weight=".5"
            android:textSize="18dp"
            android:visibility="gone"
            android:gravity="center_vertical|left"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.monitor.widget.Lato_Regular_Font>
        <LinearLayout
            android:orientation="horizontal" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:background="@color/bg1">
            <com.monitor.widget.Lato_Regular_Font
                android:layout_weight="1"
                android:textColor="@color/textcolor"
                android:text="@string/hospitalname"
                android:textSize="@dimen/textsize"
                android:gravity="center_vertical|left"
                android:id="@+id/p_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.monitor.widget.Lato_Regular_Font>
            <com.monitor.widget.Lato_Regular_Font
                android:layout_weight="1"
                android:textColor="@color/textcolor"
                android:text="Hub"
                android:id="@+id/hub"
                android:textSize="@dimen/textsize"
                android:gravity="center_vertical|center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.monitor.widget.Lato_Regular_Font>
            <com.monitor.widget.Lato_Regular_Font
                android:layout_weight="1"
                android:textColor="@color/textcolor"
                android:text="@string/noofpatient"
                android:id="@+id/noofpatients"
                android:textSize="@dimen/textsize"
                android:gravity="center_vertical|center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.monitor.widget.Lato_Regular_Font>
            <com.monitor.widget.Lato_Regular_Font
                android:layout_weight="1"
                android:textColor="@color/textcolor"
                android:text="@string/Location"
                android:id="@+id/location"
                android:textSize="@dimen/textsize"
                android:gravity="center_vertical|right"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.monitor.widget.Lato_Regular_Font>
            <com.monitor.widget.Lato_Regular_Font
                android:layout_weight="1.1"
                android:textColor="@color/textcolor"
                android:text="@string/Action"
                android:visibility="gone"
                android:textSize="@dimen/textsize"
                android:gravity="center_vertical|center"
                android:id="@+id/action0"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.monitor.widget.Lato_Regular_Font>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@color/textcolor">
        </View>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reclycle">
    </androidx.recyclerview.widget.RecyclerView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:theme="@style/AAA_ProgressBar"
        android:id="@+id/pb"
        android:layout_gravity="center_horizontal">
    </ProgressBar>
</LinearLayout>