<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg1"
    android:id="@+id/top_layout"
    android:layout_height="match_parent">
<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/tool"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/colorPrimary"-->
<!--        android:layout_alignParentTop="true"-->
<!--        app:title="Log in"-->
<!--        app:titleTextColor="@color/white"-->
<!--        ></androidx.appcompat.widget.Toolbar>-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/new_login_them">
    </ImageView>
<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->
        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:visibility="visible"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/sign_inandroid"
                android:id="@+id/image"
                android:layout_marginLeft="28.5dp">
            </ImageView>
            <com.monitor.widget.GothamBookFontForLable
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineHeight="25dp"
                android:textSize="30dp"
                android:layout_below="@id/image"
                android:layout_marginTop="52dp"
                android:layout_marginLeft="28.5dp"
                android:id="@+id/y"
                android:textColor="@color/textcolor"
                android:text="@string/Signnin">
            </com.monitor.widget.GothamBookFontForLable>
                <com.monitor.widget.EditTextFontGothamBook
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:paddingLeft="15dp"
                    android:layout_marginTop="50dp"
                    android:layout_below="@+id/y"
                    android:layout_marginRight="28.5dp"
                    android:layout_marginLeft="28.5dp"
                    android:textCursorDrawable="@drawable/curcor_color"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:hint="@string/Emial_ID"
                    android:drawablePadding="15dp"
                    android:background="@color/textfieldcolor">
                </com.monitor.widget.EditTextFontGothamBook>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_below="@+id/email"
                    android:id="@+id/overlayout"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:hintEnabled="false"
                    >
                    <com.monitor.widget.EditTextFontGothamBook
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:paddingLeft="15dp"
                        android:textSize="16dp"
                        android:layout_marginRight="28.5dp"
                        android:layout_marginLeft="28.5dp"
                        android:hint="@string/Password"
                        android:textCursorDrawable="@drawable/curcor_color"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/hintcolor"
                        android:background="@color/textfieldcolor">
                    </com.monitor.widget.EditTextFontGothamBook>
                </com.google.android.material.textfield.TextInputLayout>
            <com.monitor.widget.GothamMediumFont
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_Password"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:textSize="14dp"
                android:clickable="true"
                android:gravity="right"
                android:id="@+id/forgot"
                android:layout_marginRight="28dp">
            </com.monitor.widget.GothamMediumFont>
            <com.monitor.widget.GothamMediumFont
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Donthave_account"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_marginRight="33.5dp"
                android:layout_marginLeft="33.5dp"
                android:layout_marginTop="20dp">
            </com.monitor.widget.GothamMediumFont>
            <com.monitor.widget.GothamMediumFont
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sign_up"
                android:textColor="@color/signinbuttoncolor"
                android:textSize="18dp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:clickable="true"
                android:id="@+id/SignupTextbutton"
                android:layout_marginBottom="60dp"
                android:layout_marginRight="28.5dp"
                android:layout_marginLeft="28.5dp"
                android:layout_marginTop="20dp">
            </com.monitor.widget.GothamMediumFont>
            <Button
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:id="@+id/LoginButton"
                android:layout_marginBottom="50dp"
               android:layout_below="@id/overlayout"
                android:textSize="14dp"
                android:textAllCaps="false"
                android:layout_marginTop="40dp"
                android:background="@drawable/welcomrbutton"
                android:layout_marginRight="28.5dp"
                android:layout_marginLeft="28.5dp">
            </Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginRight="28.5dp"
                android:layout_marginLeft="29.5dp"
                android:orientation="horizontal"
                android:layout_below="@id/LoginButton">
                <ImageView
                    android:layout_width="20dp"
                    android:src="@drawable/xmlid_518"
                    android:layout_height="match_parent">
                </ImageView>
                <com.monitor.widget.Lato_Regular_Font
                    android:textColor="@color/textcolor"
                    android:text="@string/forgot_Password"
                    android:paddingLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </com.monitor.widget.Lato_Regular_Font>
            </LinearLayout>
        </RelativeLayout>
<!--    </ScrollView>-->
</RelativeLayout>